<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clientActionsRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/nova_surface"
    android:orientation="vertical"
    android:paddingLeft="@dimen/screen_horizontal_padding"
    android:paddingTop="@dimen/spacing_normal"
    android:paddingRight="@dimen/screen_horizontal_padding"
    android:paddingBottom="@dimen/spacing_normal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity_label"
            android:textColor="@color/nova_text_primary"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/minimum_touch_size"
            android:background="@drawable/fondo_del_sector_de_cantidad"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonDecreaseQuantity"
                android:layout_width="@dimen/minimum_touch_size"
                android:layout_height="@dimen/minimum_touch_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/decrease_quantity"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/icono_de_resta" />

            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="@dimen/minimum_touch_size"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/nova_text_primary"
                android:textSize="@dimen/text_size_body"
                android:textStyle="bold"
                tools:text="1" />

            <ImageButton
                android:id="@+id/buttonIncreaseQuantity"
                android:layout_width="@dimen/minimum_touch_size"
                android:layout_height="@dimen/minimum_touch_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/increase_quantity"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/icono_de_suma" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textSubtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="end"
        android:textColor="@color/nova_text_primary"
        android:textSize="@dimen/text_size_subtitle"
        android:textStyle="bold"
        tools:text="Subtotal: $109.95 MXN" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAddToCart"
        style="@style/Widget.Nova.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:contentDescription="@string/add_to_cart"
        android:text="@string/add_to_cart"
        app:icon="@drawable/icono_de_carrito"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/spacing_small" />

</LinearLayout>